--- a/QuoridorAlexJules/Makefile.Release
+++ b/QuoridorAlexJules/Makefile.Release
@@ -13,7 +13,7 @@ CC            = gcc
 CXX           = g++
 DEFINES       = -DUNICODE
 CFLAGS        = -pipe -fno-keep-inline-dllexport -O2 -Wall -Wextra $(DEFINES)
-CXXFLAGS      = -pipe -fno-keep-inline-dllexport -O2 -frtti -Wall -Wextra -fexceptions -mthreads $(DEFINES)
+CXXFLAGS      = -pipe -fno-keep-inline-dllexport -std=c++0x -O2 -frtti -Wall -Wextra -fexceptions -mthreads $(DEFINES)
 INCPATH       = -I"." -I"C:\Qt\5.4\mingw491_32\mkspecs\win32-g++" 
 LINKER      =        g++
 LFLAGS        =        -Wl,-s -Wl,-subsystem,console -mthreads
@@ -130,7 +130,8 @@ release/Board.o: Board.cpp
 
 release/Frame.o: Frame.cpp Frame.h \
 		Side.h \
-		Player.h
+		Player.h \
+		Board.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\Frame.o Frame.cpp
 
 release/Game.o: Game.cpp 
