--- a/build-QuoridorAlexJules-Desktop_Qt_5_4_1_MinGW_32bit-Debug/Makefile.Release
+++ b/build-QuoridorAlexJules-Desktop_Qt_5_4_1_MinGW_32bit-Debug/Makefile.Release
@@ -48,25 +48,40 @@ SOURCES       = ..\QuoridorAlexJules\Board.cpp \
 		..\QuoridorAlexJules\Game.cpp \
 		..\QuoridorAlexJules\Main.cpp \
 		..\QuoridorAlexJules\Player.cpp \
-		..\QuoridorAlexJules\Side.cpp 
+		..\QuoridorAlexJules\Side.cpp \
+		..\QuoridorAlexJules\subject.cpp \
+		..\QuoridorAlexJules\QuoridorConsole.cpp \
+		..\QuoridorAlexJules\Test.cpp 
 OBJECTS       = release/Board.o \
 		release/Frame.o \
 		release/Game.o \
 		release/Main.o \
 		release/Player.o \
-		release/Side.o
+		release/Side.o \
+		release/subject.o \
+		release/QuoridorConsole.o \
+		release/Test.o
 
 DIST          =  Frame.h \
 		Game.h \
 		Player.h \
 		Board.h \
 		Side.h \
-		QuoridorExceptions.h ..\QuoridorAlexJules\Board.cpp \
+		QuoridorExceptions.h \
+		observer.h \
+		subject.h \
+		QuoridorConsole.h \
+		keyboard.hpp \
+		stringConvert.hpp \
+		Test.h ..\QuoridorAlexJules\Board.cpp \
 		..\QuoridorAlexJules\Frame.cpp \
 		..\QuoridorAlexJules\Game.cpp \
 		..\QuoridorAlexJules\Main.cpp \
 		..\QuoridorAlexJules\Player.cpp \
-		..\QuoridorAlexJules\Side.cpp
+		..\QuoridorAlexJules\Side.cpp \
+		..\QuoridorAlexJules\subject.cpp \
+		..\QuoridorAlexJules\QuoridorConsole.cpp \
+		..\QuoridorAlexJules\Test.cpp
 QMAKE_TARGET  = QuoridorAlexJules
 DESTDIR        = release\ #avoid trailing-slash linebreak
 TARGET         = QuoridorAlexJules.exe
@@ -105,7 +120,7 @@ dist:
 	$(ZIP) QuoridorAlexJules.zip $(SOURCES) $(DIST) ..\QuoridorAlexJules\QuoridorAlexJules.pro C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\spec_pre.prf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\qdevice.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\device_config.prf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\common\shell-win32.conf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\qconfig.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_axbase.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_axbase_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_axcontainer.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_axcontainer_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_axserver.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_axserver_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_bluetooth.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_bluetooth_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_bootstrap_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_clucene_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_concurrent.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_concurrent_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_core.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_core_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_dbus.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_dbus_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_declarative.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_declarative_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_designer.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_designer_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_designercomponents_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_enginio.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_enginio_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_gui.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_gui_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_help.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_help_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_location.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_location_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_multimedia.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_multimedia_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_multimediawidgets.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_multimediawidgets_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_network.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_network_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_nfc.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_nfc_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_opengl.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_opengl_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_openglextensions.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_openglextensions_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_platformsupport_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_positioning.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_positioning_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_printsupport.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_printsupport_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_qml.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_qml_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_qmldevtools_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_qmltest.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_qmltest_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_qtmultimediaquicktools_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_quick.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_quick_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_quickparticles_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_quickwidgets.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_quickwidgets_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_script.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_script_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_scripttools.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_scripttools_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_sensors.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_sensors_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_serialport.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_serialport_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_sql.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_sql_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_svg.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_svg_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_testlib.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_testlib_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_uitools.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_uitools_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_webchannel.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_webchannel_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_webkit.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_webkit_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_webkitwidgets.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_webkitwidgets_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_websockets.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_websockets_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_webview.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_webview_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_widgets.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_widgets_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_winextras.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_winextras_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_xml.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_xml_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_xmlpatterns.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\modules\qt_lib_xmlpatterns_private.pri C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\qt_functions.prf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\qt_config.prf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\win32\qt_config.prf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\win32-g++\qmake.conf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\spec_post.prf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\exclusive_builds.prf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\default_pre.prf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\win32\default_pre.prf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\resolve_config.prf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\exclusive_builds_post.prf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\default_post.prf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\build_pass.prf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\win32\console.prf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\win32\rtti.prf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\precompile_header.prf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\warn_on.prf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\testcase_targets.prf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\exceptions.prf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\yacc.prf C:\Qt\Qt5.4.1\5.4\mingw491_32\mkspecs\features\lex.prf ..\QuoridorAlexJules\QuoridorAlexJules.pro  NO_PCH_SOURCES YACCSOURCES YACCSOURCES LEXSOURCES 
 
 clean: compiler_clean 
-	-$(DEL_FILE) release\Board.o release\Frame.o release\Game.o release\Main.o release\Player.o release\Side.o
+	-$(DEL_FILE) release\Board.o release\Frame.o release\Game.o release\Main.o release\Player.o release\Side.o release\subject.o release\QuoridorConsole.o release\Test.o
 
 distclean: clean 
 	-$(DEL_FILE) $(DESTDIR_TARGET)
@@ -145,14 +160,21 @@ release/Game.o: ../QuoridorAlexJules/Game.cpp ../QuoridorAlexJules/Game.h \
 		../QuoridorAlexJules/Frame.h \
 		../QuoridorAlexJules/Side.h \
 		../QuoridorAlexJules/Player.h \
+		../QuoridorAlexJules/subject.h \
 		../QuoridorAlexJules/QuoridorExceptions.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\Game.o ..\QuoridorAlexJules\Game.cpp
 
-release/Main.o: ../QuoridorAlexJules/Main.cpp ../QuoridorAlexJules/Game.h \
+release/Main.o: ../QuoridorAlexJules/Main.cpp ../QuoridorAlexJules/QuoridorConsole.h \
+		../QuoridorAlexJules/observer.h \
+		../QuoridorAlexJules/subject.h \
+		../QuoridorAlexJules/Game.h \
 		../QuoridorAlexJules/Board.h \
 		../QuoridorAlexJules/Frame.h \
 		../QuoridorAlexJules/Side.h \
-		../QuoridorAlexJules/Player.h
+		../QuoridorAlexJules/Player.h \
+		../QuoridorAlexJules/keyboard.hpp \
+		../QuoridorAlexJules/stringConvert.hpp \
+		../QuoridorAlexJules/test.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\Main.o ..\QuoridorAlexJules\Main.cpp
 
 release/Player.o: ../QuoridorAlexJules/Player.cpp ../QuoridorAlexJules/Player.h \
@@ -163,6 +185,36 @@ release/Player.o: ../QuoridorAlexJules/Player.cpp ../QuoridorAlexJules/Player.h 
 release/Side.o: ../QuoridorAlexJules/Side.cpp ../QuoridorAlexJules/Side.h \
 		../QuoridorAlexJules/QuoridorExceptions.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\Side.o ..\QuoridorAlexJules\Side.cpp
+
+release/subject.o: ../QuoridorAlexJules/subject.cpp ../QuoridorAlexJules/subject.h \
+		../QuoridorAlexJules/observer.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\subject.o ..\QuoridorAlexJules\subject.cpp
+
+release/QuoridorConsole.o: ../QuoridorAlexJules/QuoridorConsole.cpp ../QuoridorAlexJules/QuoridorConsole.h \
+		../QuoridorAlexJules/observer.h \
+		../QuoridorAlexJules/subject.h \
+		../QuoridorAlexJules/Game.h \
+		../QuoridorAlexJules/Board.h \
+		../QuoridorAlexJules/Frame.h \
+		../QuoridorAlexJules/Side.h \
+		../QuoridorAlexJules/Player.h \
+		../QuoridorAlexJules/keyboard.hpp \
+		../QuoridorAlexJules/stringConvert.hpp
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\QuoridorConsole.o ..\QuoridorAlexJules\QuoridorConsole.cpp
+
+release/Test.o: ../QuoridorAlexJules/Test.cpp ../QuoridorAlexJules/QuoridorConsole.h \
+		../QuoridorAlexJules/observer.h \
+		../QuoridorAlexJules/subject.h \
+		../QuoridorAlexJules/Game.h \
+		../QuoridorAlexJules/Board.h \
+		../QuoridorAlexJules/Frame.h \
+		../QuoridorAlexJules/Side.h \
+		../QuoridorAlexJules/Player.h \
+		../QuoridorAlexJules/keyboard.hpp \
+		../QuoridorAlexJules/stringConvert.hpp \
+		../QuoridorAlexJules/test.h \
+		../QuoridorAlexJules/QuoridorExceptions.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\Test.o ..\QuoridorAlexJules\Test.cpp
 
 ####### Install
 
